--- a/manifests/demo.yml
+++ b/manifests/demo.yml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: primary
-        image: index.docker.io/lwander/spin-kub-v2-demo
+        image: mdesanti/spin-kub-v2-demo:latest
         ports:
         - containerPort: 8000
         readinessProbe:
